# spuce

./: .clang-format  .travis.linux  .travis.osx  .travis.yml  CMakeLists.txt  Changelog.txt  Makefile  README.md  appveyor.yml  requirements  setup.sh
cmake/: SpuceConfig.cmake  SpuceConfigVersion.in.cmake
debian/: changelog  control  copyright  libspuce-dev.install  libspuce.install  rules
qt_filter/: CMakeLists.txt  des_filter.cpp  des_filter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_filter.cpp  make_filter.h  other_freq.cpp  other_freq.h  ui_mainwindow.h
qt_fir/: CMakeLists.txt  des_filter.cpp  des_filter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_filter.cpp  make_filter.h  other_freq.cpp  other_freq.h  ui_mainwindow.h
qt_iir/: CMakeLists.txt  des_filter.cpp  des_filter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_filter.cpp  make_filter.h  other_freq.h  ui_mainwindow.h
qt_other/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  make_filter.cpp  make_filter.h  ui_mainwindow.h
qt_window/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  make_filter.cpp  make_filter.h  ui_mainwindow.h
spuce/: CMakeLists.txt  Doxyfile  mixed_type.h  typedefs.h
spuce/dsp_classes/: circ_buffer.h  delay.h
spuce/dsp_functions/: convolve.h  partial_convolve.h
spuce/filters/: audio_equalizer.cpp  audio_equalizer.h  butterworth_fir.cpp  butterworth_fir.h  butterworth_iir.cpp  butterworth_iir.h  calculate_decimator_taps.cpp  calculate_decimator_taps.h  chebyshev2_iir.cpp  chebyshev2_iir.h  chebyshev_iir.cpp  chebyshev_iir.h  cic.h  create_remez_fir.cpp  create_remez_lpfir.cpp  create_remez_lpfir.h  cutboost.h  decimator.h  design_fir.cpp  design_fir.h  design_iir.cpp  design_iir.h  design_window.cpp  design_window.h  elliptic_iir.cpp  fir.h  fir_adapt.h  fir_coeff.h  fir_decim.h  fir_interp.h  gaussian_fir.cpp  gaussian_fir.h  iir.h  iir_1st.h  iir_2nd.h  iir_allpass_variable_cascade.h  iir_coeff.cpp  iir_coeff.h  iir_df.h  iir_shelf.h  (+17 more)
test_spuce/: CMakeLists.txt  MPLPlot.h  cfft.cpp  cfft.h  gen_iir_df.cpp  plot_fft.cpp  plot_fft.h  test_butterworth_iir.cpp  test_butterworth_iir_bp.cpp  test_butterworth_iir_bs.cpp  test_butterworth_iir_hpf.cpp  test_chebyshev2_iir.cpp  test_chebyshev2_iir_hpf.cpp  test_chebyshev_iir.cpp  test_chebyshev_iir_hpf.cpp  test_cic.cpp  test_decimate.cpp  test_decimate2.cpp  test_elliptic_iir.cpp  test_elliptic_iir_bp.cpp  test_elliptic_iir_hpf.cpp  test_fir.cpp  test_iir.cpp  test_iir_allpass1.cpp  test_iir_df.cpp  test_iir_df2.cpp  test_interp.cpp  test_kaiser.cpp  test_maxflat.cpp  test_notch.cpp  test_rc_bsf.cpp  test_remez.cpp  test_remez_estimate.cpp  test_sinc.cpp  test_sinc_bsf.cpp  test_transform_bpf.cpp  test_transform_bsf.cpp  test_transform_complex_bpf.cpp  test_transform_complex_bsf.cpp  test_transform_hpf.cpp  (+1 more)
